bg fixed not working on mobile, remove gradient on mint, adj tilde height resp, adj banner on mobile(not sure if working)

--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ polygon { stroke-width: 2px; }
   font-size: 4.5rem;
 }
 
-.tilde { max-width: 100%; height: 100%; }
+.tilde { max-width: 100%; height: 90px; }
 .arrow { font-size: 3rem; }
 
 .mailbox-padding {
@@ -503,7 +503,7 @@ img:hover.mailbox { animation: none; }
 .mint {
   border-radius: 100px;
   box-shadow: 1px 1px 50px 35px var(--v-light);
-  background: radial-gradient(circle, rgba(255,213,239,1) 7%, rgba(232,232,255,1) 45%, rgba(221,253,254,1) 63%);
+  background-color: var(--v-light);
 }
 
 
@@ -929,13 +929,10 @@ hr.dark-mode-active { border: 1px solid var(--light-text); }
   .banner span { font-size: 7rem; }
   span.purple { font-size: 5rem; }
   .bg-rainbow { background-size: 615px; background-position: 50% 53%; }
-  .mint {
-    background-attachment: fixed;
-    background: radial-gradient(circle, rgba(255,213,239,1) 7%, rgba(232,232,255,1) 38%, rgba(221,253,254,1) 50%);
-  }
 
   .ctr h2 { font-size: 2rem; }
   .ctr span { font-size: 4rem; }
+  .tilde { height: 60px; }
 
   footer h3 { font-size: 2rem; }
   footer h3 span { font-size: 1.5rem; }
@@ -984,11 +981,8 @@ hr.dark-mode-active { border: 1px solid var(--light-text); }
   .banner span { font-size: 5rem; }
   span.purple { font-size: 3rem; }
   .bg-rainbow { background-size: 400px; background-position: 50% 25%; }
-  .mint {
-    background-attachment: fixed;
-    background: radial-gradient(circle, rgba(255,213,239,1) 5%, rgba(232,232,255,1) 35%, rgba(221,253,254,1) 47%);
-  }
 
+  .tilde { height: 45px; }
   .bg-stories { background-attachment: fixed; }
 
   .text-poem p { font-size: 1.1rem; }
@@ -1031,28 +1025,27 @@ hr.dark-mode-active { border: 1px solid var(--light-text); }
   .xs-padded-t-lg { padding-top: 10%; }
   .xs-padded-t-xlg { padding-top: 20%; }
 
-  .logo { min-height: 7vh; width: 150px; top: -20px; }
-  .banner { font-size: 4rem; }
-  .banner span { font-size: 5rem; }
-  span.purple { font-size: 4rem; }
-  .bg-rainbow { background-size: 500px; background-position: 50% 39%; }
-
+  .logo { min-height: 7vh; width: 120px; top: -33px; }
+  .banner { font-size: 3.5rem; }
+  .banner span { font-size: 4rem; }
+  span.purple { font-size: 3.5rem; }
+  .bg-rainbow {
+    background-size: 359px;
+    background-position: 50% 70%;
+    box-shadow: 1px 1px 10px 10px #fff inset;
+  }
 
   .footer-logo { font-size: 2.8rem; }
   footer p { font-size: 0.5rem; }
   .ctr h2 { font-size: 2rem; }
   .ctr span { font-size: 3.5rem; }
+  .tilde { height: 30px; }
 
+  .mint { box-shadow: 1px 1px 30px 20px var(--v-light); }
   .quote { font-size: 1.2rem; }
   .mailbox {
     padding-top: 1rem;
     padding-bottom: 5%;
-  }
-
-  .mint {
-    background-attachment: fixed;
-    box-shadow: 1px 1px 20px 10px var(--v-light);
-    background: radial-gradient(circle, rgba(255,213,239,1) 1%, rgba(232,232,255,1) 15%, rgba(221,253,254,1) 25%);
   }
 
   .dark-transparent { opacity: 0.78; }
